refactor(auth): standardize role checks by removing 'ROLE_' prefix in annotations